Bug 669073 - Remove moz-txt-citetags from serialised HTML. r=mkmelin